docs-site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plugz-docs
  labels:
    app: plugz-docs
spec:
  selector:
    app: plugz-docs
  ports:
    - name: http
      port: 80
      targetPort: 4321
      protocol: TCP
  type: ClusterIP
