docs-site/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plugz-docs
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: docs.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plugz-docs
                port:
                  number: 80
